# VK_Endevaour

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
Application/: CMakeLists.txt  main.cpp
Applications/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.hpp  Lookup.hpp  Vertex.hpp  main.cpp
Applications/HelloTriangle/Shaders/: Frag.glsl  Vert.glsl
Applications/Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.hpp  SandboxApp.cpp  SandboxApp.hpp  SandboxEntry.cpp  main.cpp
Applications/Sandbox/Shaders/: Frag.glsl  Vert.glsl
CMake/: AddCompileOptions.cmake  CompileDefinitions.cmake  CompileOptions.cmake
Docs/: Architecture.md  Descriptors.md  Documentation.md  Introduction.md  Roadmap.md  Usage.md
Engine/: CMakeLists.txt
Engine/Core/: Memory.hpp  Timer.cpp  Timer.hpp  Types.hpp  Utility.cpp  Utility.hpp  Window.cpp  Window.hpp
Engine/Core/Debug/: Log.hpp
Engine/Debug/: Log.hpp  LogTable.hpp
Engine/Graphics/: Mesh.hpp  ObjLoader.cpp
Engine/Graphics/Import/: ObjLoader.cpp  ObjLoader.hpp
Engine/Graphics/Resources/: Mesh.hpp
Engine/Graphics/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/Graphics/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanAssert.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDefines.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrame.cpp  VulkanFrame.hpp  VulkanGlobalUniforms.cpp  VulkanGlobalUniforms.hpp  VulkanGlobals.hpp  VulkanModel.cpp  VulkanModel.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSwapchainStructs.hpp  VulkanSwapchainUtils.cpp  VulkanSwapchainUtils.hpp
Engine/Math/: ScalarGrid.cpp  ScalarGrid.hpp
Engine/Platform/: Window.cpp  Window.hpp
Scripts/: AnalyzeSources.py  BuildEngine.py  CheckDependencies.py  CreateDebugInfo.py  DebugBuild.sh  FormatFiles.py  LogStats.py  ProjectDefines.py  RunTests.py  cppcheck.sh
Tests/: CMakeLists.txt  TestMain.cpp  TestScalarGrid.cpp
